Melengkapi Portfolio Project Ke 2 - Aplikasi Excel Otomatis
Melengkapi Konten Halaman Excel Akuntansi Otomatis dan membuka Hidenya di 4portfolio.html.,//, Membuat Folder Shared yang berisi kumpulan draft yang boleh dibagikan.,//, Menambahkan Foto Priview M dan L untuk Aplikasi Akuntansi.

--- a/4portfolio.html
+++ b/4portfolio.html
@@ -64,15 +64,15 @@
                 <span>Tools: html, css, javascript</span>
               </a>
 
-              <a href="portfolio/Excel-Akuntansi-Otomatis.html" id="coming-soon">
-                <img sr="Excel-Akuntansi-Otomatis.jpg" alt="Gambar Aplikasi Excel Akuntansi Otomatis" />
+              <a href="portfolio/Excel-Akuntansi-Otomatis.html">
+                <img src="/bahan/Priview-Apk-Akun-M.webp" alt="Gambar Aplikasi Excel Akuntansi Otomatis" />
                 <h2>Aplikasi Excel Akuntansi Otomatis</h2>
                 <p>Project Pembuatan Aplikasi pencatatan Akuntansi Otomatis dan sederhana dengan Excel</p>
                 <span>Tools: Ms.Excel</span>
               </a>
 
               <a href="portfolio/Excel-Buku-Kepegawaian.html" id="coming-soon">
-                <img sr="Excel-Buku-Kepegawaian.jpg" alt="gambar Project Automasi Buku Kepegawaian Excel" />
+                <img src="Excel-Buku-Kepegawaian.jpg" alt="gambar Project Automasi Buku Kepegawaian Excel" />
                 <h2>Automasi Buku Kepegawaian Excel</h2>
                 <p>Project membuat Buku Kepegawaian yang berisi Database Pegawai, Register SK,</p>
                 <span>Tools: Ms.Excel, Ms.Word</span>
@@ -83,21 +83,21 @@
             <div id="coming-soon" class="Project">
 
               <a href="portfolio/Excel-Slip-Gaji-Sederhana.html">
-                <img sr="Excel-Slip-Gaji-Sederhana.jpg" alt="Gambar Slip Gaji Sederhana Excel" />
+                <img src="Excel-Slip-Gaji-Sederhana.jpg" alt="Gambar Slip Gaji Sederhana Excel" />
                 <h2>Slip Gaji Sederhana with Excel</h2>
                 <p>Project membuat Slip Gaji Sederhana dengan menggunakan Excel</p>
                 <span>Tools: Ms.Excel</span>
               </a>
 
               <a href="portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html">
-                <img sr="Excel-Aplikasi-Keuangan-Sederhana-UMKM.jpg" alt="Pencatatan Keuangan Sederhana Dengan Excel" />
+                <img src="Excel-Aplikasi-Keuangan-Sederhana-UMKM.jpg" alt="Pencatatan Keuangan Sederhana Dengan Excel" />
                 <h2>Pencatatan Keuangan Sederhana dengan Excel</h2>
                 <p>Project ini adalah membuat template untuk membuat pencatatan keuangan sederhana untuk UMKM</p>
                 <span>Tools: Ms.Excel</span>
               </a>
 
               <a href="portfolio/Excel-Buku-Kontrol-Pembayaran-Mahasiswa.html">
-                <img sr="Excel-Buku-Kontrol-Pembayaran-Mahasiswa.jpg" alt="Automasi Buku Kontrol Mahasiswa" />
+                <img src="Excel-Buku-Kontrol-Pembayaran-Mahasiswa.jpg" alt="Automasi Buku Kontrol Mahasiswa" />
                 <h2>Automasi Buku Kontrol Pembayaran Mahasiswa</h2>
                 <p>Project Pembuatan Buku Kontrol Pembayaran Mahasiswa dengan Ms.Excel</p>
                 <span>Tools: Ms.Excel</span>
@@ -110,21 +110,21 @@
             <div class="Project">
 
               <a href="#">
-                <img sr="gambar.jpg" alt="gambar Project" />
+                <img src="gambar.jpg" alt="gambar Project" />
                 <h2>(Judul Project)</h2>
                 <p>(ini Keterangan Projectnya)</p>
                 <span>Tools: (Aplication name)</span>
               </a>
 
               <a href="#">
-                <img sr="gambar.jpg" alt="gambar Project" />
+                <img src="gambar.jpg" alt="gambar Project" />
                 <h2>(Judul Project)</h2>
                 <p>(ini Keterangan Projectnya)</p>
                 <span>Tools: (Aplication name)</span>
               </a>
 
               <a href="#">
-                <img sr="gambar.jpg" alt="gambar Project" />
+                <img src="gambar.jpg" alt="gambar Project" />
                 <h2>(Judul Project)</h2>
                 <p>(ini Keterangan Projectnya)</p>
                 <span>Tools: (Aplication name)</span>
