update link download via javascript/blob dan membuka halaman Detail Project Automasi Buku Kepegawaian
merubah link downloadnya menggunakan javascript/blob, supaya nama file mudah dirubah,//, karena diganti Js/Blob, maka <a> diganti menjadi <span> supaya mudah, lalu diganti style nya.,//, mengupdate -Draft-Detail-Project.html dibagian download filenya.,//, Melengkapi Konten Halaman Automasi Buku Kepegawaian dan membuka Hidenya di 4portfolio.html.

--- a/4portfolio.html
+++ b/4portfolio.html
@@ -71,11 +71,11 @@
                 <span>Tools: Ms.Excel</span>
               </a>
 
-              <a href="portfolio/Excel-Buku-Kepegawaian.html" id="coming-soon">
-                <img src="Excel-Buku-Kepegawaian.jpg" alt="gambar Project Automasi Buku Kepegawaian Excel" />
+              <a href="portfolio/Excel-Buku-Kepegawaian.html">
+                <img src="/bahan/Priview-Buku-Kepegawaian-M.webp" alt="Gambar Preview Automasi Buku Kepegawaian Excel" />
                 <h2>Automasi Buku Kepegawaian Excel</h2>
                 <p>Project membuat Buku Kepegawaian yang berisi Database Pegawai, Register SK,</p>
-                <span>Tools: Ms.Excel, Ms.Word</span>
+                <span>Tools: Ms. Excel, Ms. Word, Google Spreadsheet</span>
               </a>
               
             </div>
