--- a/portfolio/-Draft-Detail-Project.html
+++ b/portfolio/-Draft-Detail-Project.html
@@ -101,13 +101,14 @@
           </div>
             
           <div class="DP-Content">
-            <h3>Download Draft Excel</h3>
-            <p>
-              Jika anda tertarik dengan project yang telah saya buat, anda boleh mendownload 
-              Draftnya yang berisi Dummies Data. Jika memang bermanfaat bagi anda, anda boleh 
-              menyimpannya dengan click Tautan Berikut:
+            <h3>Link download draft Excel</h3>
+            <p>Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
+              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya secara 
+              gratis dengan meng-click tombol dibawah ini:
             </p>
-            <a href="#">Download Disini</a>
+            <span onclick="downloadFile('(lokasi Filenya)','Nama File jika di download')">
+              Download Draftnya Disini
+            </span>
           </div>
 
           <!-- Rincian Fitur -->
