--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -66,7 +66,7 @@
           <div class="DP-Content">
             <h3>Deskripsi Proyek</h3>
             <p>
-              Proyek ini saya kerjakan bertujuan untuk mempermudah pekerjaan saya dalam 
+              Proyek ini saya bertujuan untuk mempermudah pekerjaan saya dalam 
               membuat laporan keuangan. Dalam proyek ini saya menggabungkan beberapa rumus 
               untuk membuat draft Ms.Excel yang akan membuat laporan keuangan otomatis.
             </p>
@@ -107,9 +107,9 @@
               untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya secara 
               gratis dengan meng-click tombol dibawah ini:
             </p>
-            <a href="/shared/Aplikasi-Akuntansi-Excel.xlsx" download="Aplikasi Akuntansi Sederhana By Maulana-Satria-Nugraha.xlsx">
+            <span onclick="downloadFile('/shared/Aplikasi-Akuntansi-Excel.xlsx','Aplikasi Akuntansi Sederhana By Maulana-Satria-Nugraha.xlsx')">
               Download Draftnya Disini
-            </a>
+            </span>
           </div>
             
           <!-- Rincian Fitur -->
