merubah nama-nama html agar lebih SEO friendly
semua html yang diawali dengan angka, di hilangkan angkanya, karena ternyata tidak SEO friendly

--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
         <nav class="nav-link">
           <a href="index.html" class="menu-navbar"><span>Home</span></a>
           <a href="#" class="menu-navbar active"><span>About</span></a>
-          <a href="3gallery.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="4portfolio.html" class="menu-navbar"
+          <a href="gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="portfolio.html" class="menu-navbar"
             ><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
@@ -64,7 +64,7 @@
               dan pengelolaan data. Saya selalu berkomitmen untuk terus belajar 
               dan berkontribusi dalam bidang administrasi, keuangan, dan teknologi.
             </p>
-            <a href="4portfolio.html" class="Button">Lihat Portofolio</a>
+            <a href="portfolio.html" class="Button">Lihat Portofolio</a>
           </section>
         <!-- Simple Profil End -->
 
