--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <!-- Navigation Bar Tampilan Dekstop -->
         <nav class="nav-link">
           <a href="#" class="menu-navbar active"><span>Home</span></a>
-          <a href="2about.html" class="menu-navbar"><span>About</span></a>
-          <a href="3gallery.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="4portfolio.html" class="menu-navbar"><span>Portofolio</span></a>
+          <a href="about.html" class="menu-navbar"><span>About</span></a>
+          <a href="gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="portfolio.html" class="menu-navbar"><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
@@ -75,7 +75,7 @@
               dan akuntansi. Sedang belajar coding untuk meningkatkan
               keterampilan digital. Siap berkontribusi secara profesional.
             </p>
-            <button onclick="window.location.href='2about.html';">
+            <button onclick="window.location.href='about.html';">
               Let's get started
             </button>
           </div>
