--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -35,9 +35,9 @@
         <!-- Navigation Bar Tampilan Dekstop -->
         <nav class="nav-link">
           <a href="/index.html" class="menu-navbar"><span>Home</span></a>
-          <a href="/2about.html" class="menu-navbar"><span>About</span></a>
-          <a href="/3gallery.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="/4portfolio.html" class="menu-navbar active"><span>Portofolio</span></a>
+          <a href="/about.html" class="menu-navbar"><span>About</span></a>
+          <a href="/gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="/portfolio.html" class="menu-navbar active"><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
@@ -132,7 +132,7 @@
           </div>
 
           <div class="Button-box" >
-            <a href="/4portfolio.html" class="Button">Kembali ke Portofolio</a>
+            <a href="/portfolio.html" class="Button">Kembali ke Portofolio</a>
           </div>
         </section>
       </section>
