--- a/portfolio/Excel-Slip-Gaji-Sederhana.html
+++ b/portfolio/Excel-Slip-Gaji-Sederhana.html
@@ -35,10 +35,9 @@
         <!-- Navigation Bar Tampilan Dekstop -->
         <nav class="nav-link">
           <a href="/index.html" class="menu-navbar"><span>Home</span></a>
-          <a href="/2about.html" class="menu-navbar"><span>About</span></a>
-          <a href="/3gallery.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="/4portfolio.html" class="menu-navbar active"><span>Portofolio</span></a
-          >
+          <a href="/about.html" class="menu-navbar"><span>About</span></a>
+          <a href="/gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="/portfolio.html" class="menu-navbar active"><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
@@ -53,7 +52,7 @@
       <section class="main">
         <div class="Alert">
           <h1>Some Work In Progress, Please Come Back Later!</h1>
-          <a href="/4portfolio.html">click untuk kembali</a>
+          <a href="/portfolio.html">click untuk kembali</a>
         </div>          
       </section>
       <!-- Content End -->
