--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
         <!-- Navigation Bar Tampilan Dekstop -->
         <nav class="nav-link">
           <a href="index.html" class="menu-navbar"><span>Home</span></a>
-          <a href="2about.html" class="menu-navbar"><span>About</span></a>
-          <a href="3gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="about.html" class="menu-navbar"><span>About</span></a>
+          <a href="gallery.html" class="menu-navbar"><span>Galery</span></a>
           <a href="#" class="menu-navbar active"><span>Portofolio</span></a
           >
         </nav>
