Ada nama og yang masih menggunakan vercel

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
     <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Automation and Admin Support." />
-    <meta property="og:image" content="https://maulana-sn-portfolio.vercel.app/bahan/og-index.webp" />
-    <meta property="og:url" content="https://maulana-sn-portfolio.vercel.app/" />
+    <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-index.webp" />
+    <meta property="og:url" content="https://maulana-satria.pages.dev/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta (berfungsi juga di beberapa platform lain) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Portofolio Maulana Satria Nugraha" />
     <meta name="twitter:description" content="Excel Automation and Admin Support. Temukan portofolio lengkap saya di sini." />
-    <meta name="twitter:image" content="https://maulana-sn-portfolio.vercel.app/bahan/og-index.webp" />
-    <meta name="twitter:url" content="https://maulana-sn-portfolio.vercel.app/" />
+    <meta name="twitter:image" content="https://maulana-satria.pages.dev/bahan/og-index.webp" />
+    <meta name="twitter:url" content="https://maulana-satria.pages.dev/" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-93Y877EE55"></script>
