tambah meta property ''og:locale'' untuk menunjukkan region

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-index.webp" />
     <meta property="og:url" content="https://maulana-satria.pages.dev/" />
     <meta property="og:type" content="website" />
+    <meta property="og:locale" content="id_ID" />
 
     <!-- Twitter Card Meta (berfungsi juga di beberapa platform lain) -->
     <meta name="twitter:card" content="summary_large_image" />
