Merubah title, deskripsi Meta, dan OG sesuai Gtag baru

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     
-    <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
+    <title>Maulana Satria Nugraha - Excel Expert | Finance & Administrative Support</title>
 
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
-    <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Automation and Admin Support." />
+    <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Expert | Finance & Administrative Support." />
     <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-index.webp" />
     <meta property="og:url" content="https://maulana-satria.pages.dev/" />
     <meta property="og:type" content="website" />
@@ -28,7 +28,7 @@
     <!-- Twitter Card Meta (berfungsi juga di beberapa platform lain) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Portofolio Maulana Satria Nugraha" />
-    <meta name="twitter:description" content="Excel Automation and Admin Support. Temukan portofolio lengkap saya di sini." />
+    <meta name="twitter:description" content="Excel Expert | Finance & Administrative Support. Temukan portofolio lengkap saya di sini." />
     <meta name="twitter:image" content="https://maulana-satria.pages.dev/bahan/og-index.webp" />
     <meta name="twitter:url" content="https://maulana-satria.pages.dev/" />
 
