udah males banget, salah mulu G tag nyagit add .

--- a/portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html
+++ b/portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html
@@ -23,9 +23,9 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-04NGYTWV5Y');
+      gtag('config', 'G-93Y877EE55');
     </script>
- 
+
 </head>
 <body>
     <section class="container">
