--- a/portfolio/-Draft-Detail-Project.html
+++ b/portfolio/-Draft-Detail-Project.html
@@ -20,7 +20,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-04NGYTWV5Y');
+      gtag('config', 'G-93Y877EE55');
     </script>
 
 </head>
