Ganti G-tag lagi, semoga kali ini final

--- a/portfolio/Excel-Slip-Gaji-Sederhana.html
+++ b/portfolio/Excel-Slip-Gaji-Sederhana.html
@@ -17,13 +17,13 @@
     <title>Excel Slip Gaji Sederhana</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93Y877EE55"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-93Y877EE55');
+      gtag('config', 'G-RJV4SXKQMB');
     </script>
 
 </head>
