--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <meta name="twitter:url" content="https://maulana-satria.pages.dev/" />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93Y877EE55"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-93Y877EE55');
+      gtag('config', 'G-RJV4SXKQMB');
     </script>
 
   </head>
