--- a/portfolio/Website-Sekolah-DCD-Academy.html
+++ b/portfolio/Website-Sekolah-DCD-Academy.html
@@ -18,13 +18,13 @@
     <title>Website Sekolah DCD Academy</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93Y877EE55"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-93Y877EE55');
+      gtag('config', 'G-RJV4SXKQMB');
     </script>
 
 </head>
