--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     keuangan dengan keahlian dalam otomatisasi data menggunakan Excel. Saat 
     ini juga sedang mendalami coding untuk meningkatkan efisiensi kerja. 
     Temukan portofolio dan pengalaman lengkapnya di sini. Email: maulana.satria.n03@gmail.com">
+    <meta name="google-site-verification" content="2iXKu0XFXFl4bVxNnaGcebM1zuRYh7TNN520XIDxSb0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
