Update ''Canonical URL'' untuk pindah website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     
     <title>Maulana Satria Nugraha - Excel Expert | Finance & Administrative Support</title>
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://maulana-satria.pages.dev/" />
+
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
     <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Expert | Finance & Administrative Support." />
