Menambahkan Open Graph untuk halaman Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,23 @@
     <link rel="stylesheet" href="Responsive.css" />
     <title>Portfolio of Maulana Satria Nugraha</title>
 
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
+    <meta property="og:description" content="Portofolio List Project yang pernah dikerjakan oleh Maulana Satria Nugraha" />
+    <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-portfolio.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://maulana-satria.pages.dev/portfolio.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="id_ID" />
+
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portofolio Maulana Satria Nugraha" />
+    <meta name="twitter:description" content="Portofolio List Project yang pernah dikerjakan oleh Maulana Satria Nugraha" />
+    <meta name="twitter:image" content="https://maulana-satria.pages.dev/bahan/og-portfolio.webp" />
+    <meta name="twitter:url" content="https://maulana-satria.pages.dev/portfolio.html" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
     <script>
