Update Deskripsi Halaman DP-Buku Kepegawaian dan lain-lain
Update Deskripsi dari halaman DP-Buku Kepegawaian, Update Deskripsi download draft DP dan DP Akuntansi Otomatis

--- a/portfolio/-Draft-Detail-Project.html
+++ b/portfolio/-Draft-Detail-Project.html
@@ -101,9 +101,10 @@
             
           <div class="DP-Content">
             <h3>Link download draft Excel</h3>
-            <p>Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
-              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya secara 
-              gratis dengan meng-click tombol dibawah ini:
+            <p>
+              Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
+              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya 
+              secara gratis dengan meng-click tombol dibawah ini:
             </p>
             <span onclick="downloadFile('(lokasi Filenya)','Nama File jika di download')">
               Download Draftnya Disini
