--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -66,9 +66,9 @@
           <div class="DP-Content">
             <h3>Deskripsi Proyek</h3>
             <p>
-              Proyek ini saya bertujuan untuk mempermudah pekerjaan saya dalam 
-              membuat laporan keuangan. Dalam proyek ini saya menggabungkan beberapa rumus 
-              untuk membuat draft Ms.Excel yang akan membuat laporan keuangan otomatis.
+              Proyek ini saya buat untuk mempermudah proses pembuatan laporan keuangan di tempat saya bekerja. 
+              Karena belum tersedia aplikasi akuntansi khusus, saya mengembangkan draft Excel yang dapat 
+              menghasilkan laporan keuangan secara otomatis menggunakan kombinasi berbagai rumus dan formula.
             </p>
           </div>
           
@@ -76,14 +76,16 @@
           <div class="DP-Content">
             <h3>Pengalaman saat membuatnya</h3>
             <p>
-              Awal mula saya mengerjakan proyek ini dikarenakan ditempat kerja saya belum 
-              ada aplikasi akuntansi, sedangkan untuk membeli sebuah aplikasi memerlukan
-              biaya yang lumayan tinggi dan memang sebenarnya masih belum terlalu dibutuhkan. 
-              Maka dari itu saya berinisiatif untuk membuat sebuah draft Ms.Excel yang akan otomatis 
-              membuat laporan Akuntansi. Banyak Sekali <i>trial and error</i> pada saat membuat draft 
-              ini, saya juga banyak mencari info di internet ataupun tutorial di youtube untuk menyempurnakan
-              aplikasi akuntansi ini. Walaupun masih ada beberapa kekurangan, namun Aplikasi Akuntansi 
-              otomatis Ms.Excel ini banyak membantu saya dalam mengerjakan tugas saya sehari-hari.
+              Awalnya, tempat saya bekerja belum memiliki aplikasi akuntansi khusus, sementara untuk membeli 
+              software profesional membutuhkan biaya yang cukup besar dan belum menjadi prioritas saat itu. 
+              Melihat kebutuhan tersebut, saya berinisiatif membuat draft aplikasi akuntansi sederhana berbasis 
+              Microsoft Excel.
+            </p>
+            <p>
+              Proses pengembangannya cukup menantang karena banyak percobaan (trial and error) yang saya lakukan. 
+              Saya juga mencari berbagai referensi dari internet dan tutorial di YouTube untuk menyempurnakan sistemnya. 
+              Meskipun masih memiliki beberapa keterbatasan, aplikasi akuntansi berbasis Excel ini sangat membantu saya 
+              dalam menunjang pekerjaan saya sehari-hari, khususnya dalam menyusun laporan keuangan secara cepat dan rapi.
             </p>
           </div>
 
@@ -103,9 +105,10 @@
           
           <div class="DP-Content">
             <h3>Link download draft Excel</h3>
-            <p>Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
-              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya secara 
-              gratis dengan meng-click tombol dibawah ini:
+            <p>
+              Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
+              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya 
+              secara gratis dengan meng-click tombol dibawah ini:
             </p>
             <span onclick="downloadFile('/shared/Aplikasi-Akuntansi-Excel.xlsx','Aplikasi Akuntansi Sederhana By Maulana-Satria-Nugraha.xlsx')">
               Download Draftnya Disini
