--- a/portfolio/Excel-Buku-Kepegawaian.html
+++ b/portfolio/Excel-Buku-Kepegawaian.html
@@ -123,9 +123,10 @@
           
           <div class="DP-Content">
             <h3>Link download draft Excel</h3>
-            <p>Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
-              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya secara 
-              gratis dengan meng-click tombol dibawah ini:
+            <p>
+              Jika anda tertarik melihat draft hasil project saya, atau anda membutuhkannya 
+              untuk kebutuhan di Perusahaan/Instansi/Usaha anda, silahkan mendownloadnya 
+              secara gratis dengan meng-click tombol dibawah ini:
             </p>
             <span onclick="downloadFile('/shared/Buku-Kepegawaian-isi.xlsx','Buku Kepegawaian Automated dan isi By Maulana-Satria-Nugraha.xlsx')">
               Download Draftnya beserta contohnya disini
