Menambahkan Favicon, dan Update Navbar supaya best practice dan menarik

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
+    <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
     
     <title>Maulana Satria Nugraha - Excel Expert | Finance & Administrative Support</title>
 
@@ -52,13 +53,13 @@
     <section class="container">
       <!-- Navigation Bar Start -->
       <header class="navbar">
-        <a href="index.html" class="navJudul">MyPortfolio</a>
+        <a href="/index.html" class="navJudul"><img src="/bahan/Logo_Maul-Crop.webp" alt="Logo - Portofolio Maulana Satria Nugraha" /> </a>
         <!-- Navigation Bar Tampilan Dekstop -->
         <nav class="nav-link">
-          <a href="#" class="menu-navbar active"><span>Home</span></a>
-          <a href="about.html" class="menu-navbar"><span>About</span></a>
-          <a href="gallery.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="portfolio.html" class="menu-navbar"><span>Portofolio</span></a>
+          <a href="/index.html" class="menu-navbar active">Home</a>
+          <a href="/about.html" class="menu-navbar">About</a>
+          <a href="/gallery.html" class="menu-navbar">Galery</a>
+          <a href="/portfolio.html" class="menu-navbar">Portofolio</a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
