--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
+    <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
+
     <title>Portfolio of Maulana Satria Nugraha</title>
 
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
@@ -47,14 +49,13 @@
     <section class="container">
         <!-- Navigation Bar Start -->
       <header class="navbar">
-        <a href="index.html" class="navJudul">MyPortfolio</a>
+        <a href="/index.html" class="navJudul"><img src="/bahan/Logo_Maul-Crop.webp" alt="Logo - Portofolio Maulana Satria Nugraha" /> </a>
         <!-- Navigation Bar Tampilan Dekstop -->
         <nav class="nav-link">
-          <a href="index.html" class="menu-navbar"><span>Home</span></a>
-          <a href="about.html" class="menu-navbar"><span>About</span></a>
-          <a href="gallery.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="#" class="menu-navbar active"><span>Portofolio</span></a
-          >
+          <a href="/index.html" class="menu-navbar">Home</a>
+          <a href="/about.html" class="menu-navbar">About</a>
+          <a href="/gallery.html" class="menu-navbar">Galery</a>
+          <a href="#" class="menu-navbar active">Portofolio</a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
