Perbaikan struktur Head dan penambahan Structured Data JSON-LD, keyword, dan lain-lain

--- a/gallery.html
+++ b/gallery.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
+  <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jelajahi galeri proyek dan dokumentasi 
-    profesional Maulana Satria Nugraha, termasuk Dokumentasi di lingkungan kerja ataupun hasil 
-    kerja di bidang administrasi, keuangan, serta pengelolaan data otomatis. 
-    Lihat lebih banyak di sini! Email:maulana.satria.n03@gmail.com">
+    <meta name="description" content="Galeri Maulana Satria Nugraha: 
+    dokumentasi project, lingkungan kerja, dan behind the scene di bidang keuangan dan administrasi menggunakan Ms.Excel">
+    <meta name="keywords" content="galeri Maulana Satria Nugraha, dokumentasi project, dokumentasi kerja, foto Maulana Satria Nugraha, 
+    behind the scene project, galeri keuangan, galeri administrasi, galeri otomatisasi Excel, Maulana, Satria, Nugraha">
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="custom.css" />
-    <link rel="stylesheet" href="Responsive.css" />
+    
+    <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
     <title>Galery of Maulana Satria Nugraha</title>
+
+    <!-- Structured Data JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ImageGallery",
+      "name": "Galery of Maulana Satria Nugraha",
+      "url": "https://maulana-satria.pages.dev/gallery",
+      "description": "Galeri proyek unggulan dan dokumentasi profesional Maulana Satria Nugraha di bidang keuangan dan administrasi.",
+      "creator": {
+        "@type": "Person",
+        "name": "Maulana Satria Nugraha",
+        "url": "https://maulana-satria.pages.dev/",
+        "image": "https://maulana-satria.pages.dev/bahan/Maulana-Satria-Nugraha.webp",
+        "email": "mailto:maulana.satria.n03@gmail.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/maulana-satria-nugraha",
+          "https://www.instagram.com/maulana.satria_n/",
+          "https://www.facebook.com/msn.socialpreneur/",
+          "https://github.com/CodeByMaul"
+        ]
+      }
+    }
+    </script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
@@ -27,8 +57,8 @@
       gtag('config', 'G-RJV4SXKQMB');
     </script>
 
-</head>
-<body>
+  </head>
+  <body>
     <section class="container">
         <!-- Navigation Bar Start -->
       <header class="navbar">
@@ -196,5 +226,5 @@
         <!-- Footer End -->
     </section>
     <script src="logic.js"></script>
-</body>
+  </body>
 </html>
