--- a/about.html
+++ b/about.html
@@ -1,21 +1,59 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
+  <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kenali lebih dekat Maulana Satria Nugraha, seorang 
-    staf administrasi dengan latar belakang akuntansi dan spesialisasi dalam 
-    otomatisasi data. Berpengalaman dalam pengelolaan keuangan dan sistem 
-    administrasi berbasis teknologi. email: maulana.satria.n03@gmail.com">
+    <meta name="description" content="Profil lengkap Maulana Satria Nugraha, 
+    Excel Expert di bidang Finance & Administration. Temukan pengalaman, keahlian, 
+    dan project-project unggulannya di sini.">
+    <meta name="keywords" content="tentang Maulana Satria Nugraha, profil Maulana Satria Nugraha, 
+    pengalaman kerja, keahlian Excel, administrasi keuangan, personal branding, pengembang website, 
+    project data otomatisasi, personal website, CV online">
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="custom.css" />
-    <link rel="stylesheet" href="Responsive.css" />
+    
+    <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
     <title>About Maulana Satria Nugraha</title>
+
+    <!-- Structured Data JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Maulana Satria Nugraha",
+      "url": "https://maulana-satria.pages.dev/about",
+      "image": "https://maulana-satria.pages.dev/bahan/Maulana-Satria-Nugraha.webp",
+      "jobTitle": "Finance and Administration Staff",
+      "email": "mailto:maulana.satria.n03@gmail.com",
+      "description": "Kenali lebih dekat Maulana Satria Nugraha, seorang Excel Expert di bidang Finance & Administration dengan pengalaman mengelola laporan keuangan, administrasi, serta project berbasis Excel.",
+      "sameAs": [
+        "https://www.linkedin.com/in/maulana-satria-nugraha",
+        "https://www.instagram.com/maulana.satria_n/",
+        "https://www.facebook.com/msn.socialpreneur/",
+        "https://github.com/CodeByMaul",
+      ],
+      "alumniOf": [
+        {
+          "@type": "EducationalOrganization",
+          "name": "Universitas 17 Agustus 1945 (Untag) Semarang"
+        },
+        {
+          "@type": "EducationalOrganization",
+          "name": "SMKN 7 (STM Pembangunan / STEMBA) Semarang"
+        }
+      ]
+    }
+    </script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
@@ -27,8 +65,8 @@
       gtag('config', 'G-RJV4SXKQMB');
     </script>
 
-</head>
-<body>
+  </head>
+  <body>
     <section class="container">
       <!-- Navigation Bar Start -->
       <header class="navbar"> 
@@ -190,5 +228,5 @@
       <!-- Footer End -->
     </section>
     <script src="logic.js"></script>  
-</body>
+  </body>
 </html>
