--- a/portfolio/-Draft-Detail-Project.html
+++ b/portfolio/-Draft-Detail-Project.html
@@ -4,16 +4,25 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ini adalah Draft untuk membuat Detail Project, semoga kalian gak melihatnya.
-    Email: maulana.satria.n03@gmail.com">
+    <meta name="description" content="ini adalah Draft untuk membuat Detail Project, semoga kalian gak melihatnya.">
+    <meta name="keywords" content="???">
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/custom.css" />
-    <link rel="stylesheet" href="/Responsive.css" />
+    
+    <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
     <title>Website Sekolah DCD Academy</title>
+
+    <!-- Structured Data JSON-LD -->
+    <!--(Belum dibuat)-->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
