--- a/portfolio/Excel-Buku-Kepegawaian.html
+++ b/portfolio/Excel-Buku-Kepegawaian.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
+  <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lihat detail proyek Sistem Buku 
-    Kepegawaian Otomatis berbasis Excel karya Maulana Satria Nugraha. 
-    Menggunakan rumus dan dashboard otomatis untuk mempercepat pengelolaan 
-    database kepegawaian dan meningkatkan efisiensi administrasi sekolah/institusi. 
-    Email: maulana.satria.n03@gmail.com">
+    <meta name="description" content="Lihat proyek Buku Kepegawaian Otomatis berbasis 
+    Excel karya Maulana Satria Nugraha. Mempermudah pengelolaan administrasi kepegawaian 
+    sekolah dan institusi.">
+    <meta name="keywords" content="buku kepegawaian Excel, buku kepegawaian otomatis, 
+    administrasi Excel sekolah, aplikasi Excel otomatis, template Excel kepegawaian, 
+    dashboard Excel, project administrasi, portofolio Excel, Maulana Satria Nugraha, 
+    draft kepegawaian sekolah, Excel kepegawaian gratis, administrasi Excel sederhana, 
+    draft kepegawaian Excel gratis">
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/custom.css" />
-    <link rel="stylesheet" href="/Responsive.css" />
+    
+    <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>Excel Buku Kepegawaian</title>
+    <title>Buku Kepegawaian Excel Otomatis | Maulana Satria Nugraha</title>
+
+    <!-- Structured Data JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Project",
+      "name": "Buku Kepegawaian Excel otomatis by Maulana Satria Nugraha",
+      "url": "https://maulana-satria.pages.dev/portfolio/Excel-Buku-Kepegawaian",
+      "description": "Buku Kepegawaian berbasis Excel otomatis karya Maulana Satria Nugraha. Dilengkapi dashboard interaktif, template administrasi, dan fitur otomatisasi untuk mempermudah pengelolaan data kepegawaian sekolah dan institusi.",
+      "creator": {
+        "@type": "Person",
+        "name": "Maulana Satria Nugraha",
+        "url": "https://maulana-satria.pages.dev/",
+        "image": "https://maulana-satria.pages.dev/bahan/Maulana-Satria-Nugraha.webp",
+        "email": "mailto:maulana.satria.n03@gmail.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/maulana-satria-nugraha",
+          "https://www.instagram.com/maulana.satria_n/",
+          "https://www.facebook.com/msn.socialpreneur/",
+          "https://github.com/CodeByMaul"
+        ]
+      }
+    }
+    </script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
@@ -28,8 +61,8 @@
       gtag('config', 'G-RJV4SXKQMB');
     </script>
 
-</head>
-<body>
+  </head>
+  <body>
     <section class="container">
         <!-- Navigation Bar Start -->
       <header class="navbar">
@@ -171,5 +204,5 @@
       <!-- Footer End -->
     </section>
     <script src="/logic.js"></script>
-</body>
+  </body>
 </html>
