--- a/portfolio/Website-Sekolah-DCD-Academy.html
+++ b/portfolio/Website-Sekolah-DCD-Academy.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
+  <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lihat detail proyek website sekolah 
-    DCD Academy yang dibangun oleh Webdev Warriors (Tim Project Latihan) 
-    dengan Maulana Satria Nugraha sebagai Project Managernya. Website 
-    profesional berbasis HTML, CSS, dan javascript untuk profil 
-    institusi pendidikan.
-    Email: maulana.satria.n03@gmail.com">
+    <meta name="description" content="Proyek website profil sekolah DCD Academy berbasis 
+    HTML, CSS, dan JavaScript. Dibangun oleh Webdev Warriors dengan Maulana Satria Nugraha 
+    sebagai Project Manager.">
+    <meta name="keywords" content="website sekolah, DCD Academy, project web HTML CSS, 
+    website profil institusi pendidikan, Webdev Warriors, Maulana Satria Nugraha, 
+    latihan website sekolah">
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/custom.css" />
-    <link rel="stylesheet" href="/Responsive.css" />
+    
+    <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>Website Sekolah DCD Academy</title>
+    <title>Website Sekolah DCD Academy (Fiktif) - Project Maulana Satria Nugraha</title>
+
+    <!-- Structured Data JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Project",
+      "name": "Website Sekolah DCD Academy (Fiktif) - Project Maulana Satria Nugraha",
+      "url": "https://maulana-satria.pages.dev/portfolio/Website-Sekolah-DCD-Academy",
+      "description": "Detail proyek Website Sekolah DCD Academy berbasis HTML, CSS, dan JavaScript. Dibangun oleh Webdev Warriors dengan Maulana Satria Nugraha sebagai Project Manager.",
+      "creator": {
+        "@type": "Person",
+        "name": "Maulana Satria Nugraha",
+        "url": "https://maulana-satria.pages.dev/",
+        "image": "https://maulana-satria.pages.dev/bahan/Maulana-Satria-Nugraha.webp",
+        "email": "mailto:maulana.satria.n03@gmail.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/maulana-satria-nugraha",
+          "https://www.instagram.com/maulana.satria_n/",
+          "https://www.facebook.com/msn.socialpreneur/",
+          "https://github.com/CodeByMaul"
+        ]
+      }
+    }
+    </script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
@@ -29,8 +59,8 @@
       gtag('config', 'G-RJV4SXKQMB');
     </script>
 
-</head>
-<body>
+  </head>
+  <body>
     <section class="container">
         <!-- Navigation Bar Start -->
       <header class="navbar">
@@ -141,5 +171,5 @@
       <!-- Footer End -->
     </section>
     <script src="/logic.js"></script>
-</body>
+  </body>
 </html>
