Perbaikan CSS halaman Detail Portfolio karena terubah

--- a/portfolio/-Draft-Detail-Project.html
+++ b/portfolio/-Draft-Detail-Project.html
@@ -21,8 +21,8 @@
     <!--(Belum dibuat)-->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="custom.css" />
-    <link rel="stylesheet" href="Responsive.css" />
+    <link rel="stylesheet" href="/custom.css" />
+    <link rel="stylesheet" href="/Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
