--- a/portfolio/Website-Sekolah-DCD-Academy.html
+++ b/portfolio/Website-Sekolah-DCD-Academy.html
@@ -46,8 +46,8 @@
     </script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="custom.css" />
-    <link rel="stylesheet" href="Responsive.css" />
+    <link rel="stylesheet" href="/custom.css" />
+    <link rel="stylesheet" href="/Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
