--- a/portfolio/Excel-Buku-Kontrol-Pembayaran-Mahasiswa.html
+++ b/portfolio/Excel-Buku-Kontrol-Pembayaran-Mahasiswa.html
@@ -24,8 +24,8 @@
     <!--(Belum dibuat)-->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="custom.css" />
-    <link rel="stylesheet" href="Responsive.css" />
+    <link rel="stylesheet" href="/custom.css" />
+    <link rel="stylesheet" href="/Responsive.css" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
